millora classe Torns